# backend/internal/http-server/server.go
@@ -44,7 +44,7 @@ func NewHttpServer(log *slog.Logger, postgres config.PostgresConfig, listenAddr 
 		company := api.Group("/companies")
 		{
 			company.POST("", companyHandler.CreateCompany)
-			company.GET("/:id", companyHandler.GetCompany)
+			company.GET("", companyHandler.GetCompany)
 			company.GET("/employees", employeeHandler.GetEmployeesByCompanyID)
 			company.GET("/projects", projectHandler.GetProjectsByCompanyID)
 			company.PUT("", companyHandler.UpdateCompany)
